<resources>
    <string name="app_name">太宜食聊</string>
    <string name="tysl_home">首页</string>
    <string name="tysl_live_broadcasting_room">直播室</string>
    <string name="tysl_shop_cart">购物车</string>
    <string name="tysl_goods_fenlei">分类</string>
    <string name="tysl_ucenter">个人中心</string>
    <string name="tysl_ask_service">问健康</string>
    <string name="tysl_goods_category">商品分类</string>
    <string name="tysl_ylj">易旅居</string>
    <string name="tysl_chain_stores">智慧零售</string>
    <string name="tysl_jsh">聚食惠</string>
    <string name="tysl_sjzc">社交资产</string>
    <string name="tysl_recruitment">商家入驻</string>
    <string name="tysl_service_in">服务入驻</string>
    <string name="tysl_goods_favorites">商品收藏</string>
    <string name="tysl_shop_favorites">店铺收藏</string>
    <string name="tysl_dietician_favorites">顾问收藏</string>
    <string name="tysl_article_favorites">文章收藏</string>
    <string name="tysl_goods_order">商品订单</string>
    <string name="tysl_service_order">服务订单</string>
    <string name="tysl_feedback">意见反馈</string>
    <string name="tysl_about_us">关于我们</string>
    <string name="tysl_settings">设置</string>
    <string name="tysl_goods_shoucang">我的收藏</string>
    <string name="tysl_goods_list">商品列表</string>
    <string name="tysl_edit_userinfo">个人信息</string>
    <string name="tysl_edit_usermoney">社交链</string>
    <string name="tysl_edit_userruzhu">我要入驻</string>
    <string name="tysl_edit_yinyangshi">营养师认证</string>
    <string name="tysl_edit_shangjia">商家入驻申请</string>
    <string name="tysl_edit_zhihui">智慧零售入驻申请</string>
    <string name="tysl_goods_detail">商品详情</string>
    <string name="tysl_article_detail">文章详情</string>
    <string name="tysl_type_of_profession">职业类型</string>
    <string name="tysl_the_field_of_training">擅长领域</string>
    <string name="tysl_buy_service">购买服务</string>
    <string name="tysl_street_list_detail">店铺详情</string>
    <string name="tysl_integral_record">资产明细</string>
    <string name="tysl_street_active_content">活动详情</string>
    <string name="tysl_order_confirmation">订单确认</string>
    <string name="tysl_integration_rule">资产规则</string>
    <string name="tysl_integral_exchange_record">兑换记录</string>
    <string name="tysl_service_authentication_result">服务认证结果</string>
    <string name="tysl_integral_get_exchange_record">兑换记录</string>
    <string name="tysl_express">物流记录</string>
    <string name="tysl_my_health">专属顾问</string>
    <string name="tysl_details_of_refund">退款詳情</string>
    <string name="tysl_returns_detailed">收益明细</string>
    <string name="tysl_my_apply_for">我的申请</string>
    <string name="tysl_my_order">我的订单</string>
    <string name="tysl_my_order2">智慧零售订单</string>
    <string name="tysl_order_detail">订单详情</string>
    <string name="tysl_message_control">消息中心</string>
    <string name="tysl_goods_evaluate">商品评价</string>
    <string name="tysl_service_evaluate">服务评价</string>
    <string name="tysl_die_check_evaluate">查看评价</string>
    <string name="tysl_earnings_explain">收益说明</string>
    <string name="tysl_enter_merchant">商家入驻</string>
    <string name="tysl_edit_individual_resume">修改个人简介</string>
    <string name="tysl_check_evaluate">查看评价</string>
    <string name="tysl_dietitian_join">营养师入驻</string>
    <string name="tysl_my_remind">我的提醒</string>
    <string name="tysl_notification_message">通知消息</string>
    <string name="tysl_feed_back_hint">感謝您的宝贵建议!</string>
    <string name="tysl_feed_back_mobile_hint">请填写您的手机号码，方便我们与您联系</string>
    <string name="tysl_area">所在地区</string>
    <string name="tysl_service_price">服务价格</string>
    <string name="tysl_individual_resume">个人简介</string>
    <string name="tysl_mobile">手机号</string>
    <string name="tysl_weixing">微信号</string>
    <string name="tysl_release_article">发布的文章</string>
    <string name="tysl_nutrition_recipe">营养配餐</string>
    <string name="tysl_nutrition_station">营养小站</string>
    <string name="tysl_sold">已售</string>
    <string name="tysl_evaluate_left">用户评价(</string>
    <string name="tysl_evaluate_right">)</string>
    <string name="tysl_login">登录</string>
    <string name="tysl_last_money">收支明细</string>
    <string name="tysl_logout">退出登录</string>
    <string name="tysl_register">注册</string>
    <string name="tysl_free_register">免费注册</string>
    <string name="tysl_alter_password">忘记密码</string>
    <string name="tysl_new_password">请输入新密码</string>
    <string name="tysl_get_code">获取验证码</string>
    <string name="tysl_get_codemessage">若当前号码已不用/丢失，或者无法收到验证码？</string>
    <string name="tysl_get_codemessagetwo">请联系客服：</string>
    <string name="tysl_get_codemessagethree">400-000-000</string>
    <string name="tysl_get_codemessagesuccesful">恭喜您!新手机号绑定成功!</string>
    <string name="tysl_lead_order">订单管理</string>
    <string name="tysl_line_order">线上订单</string>
    <string name="tysl_follow_order">跟进订单</string>
    <string name="tysl_unline_order">自提订单</string>
    <string name="tysl_order_price">单价</string>
    <string name="tysl_order_proft">收益</string>
    <string name="tysl_order_amont">共2件商品,</string>
    <string name="tysl_order_allprice">合计收益：¥249.00</string>
    <string name="tysl_order_num">订单编号</string>
    <string name="tysl_press_code">请输入验证码</string>
    <string name="tysl_token_error">登录失效，请重新登录</string>
    <string name="tysl_look_up_by_job_type"> 按职业类型查找</string>
    <string name="tysl_find_it_in_your_field"> 按擅长领域查找</string>
    <string name="tysl_service_star"> 服务之星</string>
    <string name="tysl_security_settings">安全设置</string>
    <string name="tysl_info_settings">消息设置</string>
    <string name="tysl_add_favorites">收藏</string>
    <string name="tysl_delete_favorites">取消收藏</string>
    <string name="tysl_immediately_change">立即兑换</string>
    <string name="tysl_shipping_address">请填写收货地址</string>
    <string name="tysl_user_service_and_price">服务期与价格</string>
    <string name="tysl_user_preview_your_home_page">个人主页</string>
    <string name="tysl_user_my_earnings">我的收益</string>
    <string name="tysl_user_recommend_goods">营养小栈</string>
    <string name="tysl_user_my_favorite">我的收藏</string>
    <string name="tysl_user_my_message">意见反馈</string>
    <string name="tysl_user_huiyuanguanli">会员管理</string>
    <string name="tysl_user_histotykehu">历史意向客户</string>
    <string name="tysl_user_erweima">创客二维码</string>
    <string name="tysl_user_tixian">提现明细</string>
    <string name="tysl_add_card">添加银行卡</string>
    <string name="tysl_user_money">账户提现</string>
    <string name="tysl_order_inventory">订单管理</string>
    <string name="tysl_order_current_inventory">当前库存： </string>
    <string name="tysl_order_top_inventory">库存上限： </string>
    <string name="tysl_order_Receipt">进货单</string>
    <string name="tysl_order_current_receipt">当下进货单</string>
    <string name="tysl_order_history_receipt">历史进货单</string>
    <string name="tysl_user_bank">银行管理</string>
    <string name="tysl_user_chuangke">创客管理</string>
    <string name="tysl_user_setting">设置</string>
    <string name="tysl_support_us">支持我们</string>
    <string name="tysl_user_address">管理收货地址</string>
    <string name="tysl_user_messagetwo">我的评价</string>
    <string name="tysl_user_writemessage">写评价</string>
    <string name="tysl_user_changedetails">置换详情</string>
    <string name="tysl_user_home_place">服务机构</string>
    <string name="tysl_user_home_ad">太宜食聊</string>
    <string name="tysl_user_home_zhihui">智慧零售</string>
    <string name="tysl_user_surechange">确认置换</string>
    <string name="tysl_user_add_address">添加地址</string>
    <string name="tysl_user_edit_address">修改收货地址</string>
    <string name="tysl_user_customer_service_hotline">客服热线</string>
    <string name="tysl_user_the_field_of_expertise">擅长领域</string>
    <string name="tysl_user_discount_coupon">我的优惠券</string>
    <string name="tysl_user_service">客服</string>
    <string name="tysl_sign_in_message">亲，您还未登录</string>
    <string name="tysl_sign_in">已签到</string>
    <string name="tysl_change_again">再次兑换</string>
    <string name="tysl_check_the_logistics">查看物流</string>
    <string name="tysl_confirm_receipt">确认收货</string>
    <string name="tysl_authentication_hint_message">*以下信息均为必填项，为保证您的利益，请如实填写。</string>
    <string name="tysl_true_head_portrait">真实头像</string>
    <string name="tysl_true_name">真实姓名</string>
    <string name="tysl_sex">性别</string>
    <string name="tysl_birthday">出生日期</string>
    <string name="tysl_id_card">身份证号</string>
    <string name="tysl_id_card_hint">请输入身份证号</string>
    <string name="tysl_id_card_photo">身份证照片</string>
    <string name="tysl_id_card_front_photo">身份证正面照</string>
    <string name="tysl_id_card_reverse_photo">身份证反面照</string>
    <string name="tysl_id_card_hand_photo">手持正面</string>
    <string name="tysl_authentication_prove">认证证明</string>
    <string name="tysl_authentication_prove_message">相关证明资料越多，通过率越高，为增加审核通过率，请尽量保证照片清晰</string>
    <string name="tysl_authentication_message1">点击注册表示阅读并同意</string>
    <string name="tysl_authentication_message2">《营养师服务协议》</string>
    <string name="tysl_authentication_submit">提交</string>
    <string name="tysl_state_all">全部</string>
    <string name="tysl_state_wait_pay">待付款</string>
    <string name="tysl_state_wait_self">待自提</string>
    <string name="tysl_state_wait_verify">待确认</string>
    <string name="tysl_state_wait_evaluate">待评价</string>
    <string name="tysl_state_canceled">已取消</string>
    <string name="tysl_state_service_ing">服务中</string>
    <string name="tysl_state_after_sale">售后</string>
    <string name="tysl_state_have_expired">已过期</string>
    <string name="tysl_state_refused">已拒绝</string>
    <string name="tysl_state_pay_earnest_money">付定金</string>
    <string name="tysl_state_pay_the_retainage">付尾款</string>
    <string name="tysl_state_wait_shipments">待发货</string>
    <string name="tysl_state_wait_for_receiving">待收货</string>
    <string name="tysl_state_recommendable_goods">可推荐商品</string>
    <string name="tysl_state_recommended_goods">已推荐商品</string>
    <string name="tysl_normal_dietician">临床营养师</string>
    <string name="tysl_clinic_dietician">公共营养师</string>
    <string name="tysl_approve_dietician">营养师认证</string>
    <string name="tysl_approve_checking">认证审核中</string>
    <string name="tysl_approve_failure">认证失败</string>
    <string name="tysl_select_date">选择日期</string>
    <string name="tysl_select_sex">选择性别</string>
    <string name="tysl_update_ticpure">上传照片</string>
    <string name="tysl_send_ticpure">发送照片</string>
    <string name="tysl_take_ticpure">拍照</string>
    <string name="tysl_edit_password">修改密码</string>
    <string name="tysl_edit_change">置换记录</string>
    <string name="tysl_edit_fabu">发布记录</string>
    <string name="tysl_edit_mobile">验证身份</string>
    <string name="tysl_edit_mobile2">绑定新手机</string>
    <string name="tysl_edit_mobile3">绑定成功</string>
    <string name="tysl_message">消息设置</string>
    <string name="tysl_take_message">消息提醒</string>
    <string name="tysl_update">检查更新</string>
    <string name="tysl_submit">提交</string>
    <string name="tysl_withdraw_deposit">账户提现</string>
    <string name="tysl_immediately_add">立即添加</string>
    <string name="tysl_alipay_account_hint">请输入您的支付宝账号</string>
    <string name="tysl_deposit_card_hint">请输入您本人储蓄卡号</string>
    <string name="tysl_account_name_hint">请输入您的姓名</string>
    <string name="tysl_deposit_bank_hint">请选择开户银行</string>
    <string name="tysl_id_cart_hint">请输入卡号</string>
    <string name="tysl_name">姓名</string>
    <string name="tysl_alipay_account">账号</string>
    <string name="tysl_deposit_card_id">卡号</string>
    <string name="tysl_deposit_bank">开户银行</string>
    <string name="tysl_default_bank">设为默认银行卡</string>
    <string name="tysl_credit_card_numbers">银行卡号</string>
    <string name="tysl_withdrawal_amount">可提现金额</string>
    <string name="tysl_business_data">经营数据</string>
    <string name="tysl_order_information">订单信息</string>
    <string name="tysl_more">更多</string>
    <string name="tysl_membership">会员人数</string>
    <string name="tysl_accumulated_income">累计收益</string>
    <string name="tysl_turnover_today">今日营业额</string>
</resources>